# FlightTrajectories

./: .readthedocs.yaml  AUTHORS  README.md  launch_optim_by_route.sh  misc_geo.py  misc_time.py  optim_analyse_route_iagos_only.py  optim_iagos_only.job  optim_iagos_only.py  pyproject.toml  screen_iagos_only.py
FLIGHTS/: africa_to_europe_2018.csv  africa_to_europe_2019.csv  africa_to_europe_2020.csv  africa_to_europe_2021.csv  africa_to_europe_2022.csv  asia_to_asia_2018.csv  asia_to_asia_2019.csv  asia_to_asia_2021.csv  asia_to_australasia_2018.csv  asia_to_australasia_2019.csv  asia_to_centralasia_2018.csv  asia_to_europe_2018.csv  asia_to_europe_2019.csv  asia_to_europe_2020.csv  asia_to_europe_2021.csv  asia_to_europe_2022.csv  asia_to_middleeast_2018.csv  asia_to_northamerica_2021.csv  asia_to_pacific_2018.csv  asia_to_pacific_2019.csv  asia_to_pacific_2020.csv  asia_to_pacific_2021.csv  asia_to_southeastasia_2018.csv  asia_to_southeastasia_2019.csv  australasia_to_asia_2018.csv  australasia_to_asia_2019.csv  australasia_to_pacific_2018.csv  australasia_to_pacific_2019.csv  australasia_to_pacific_2020.csv  centralamerica_to_europe_2018.csv  centralamerica_to_europe_2019.csv  centralamerica_to_europe_2020.csv  centralamerica_to_europe_2021.csv  centralamerica_to_europe_2022.csv  centralamerica_to_pacific_2021.csv  centralasia_to_europe_2018.csv  centralasia_to_europe_2019.csv  centralasia_to_europe_2020.csv  centralasia_to_europe_2021.csv  centralasia_to_europe_2022.csv  (+83 more)
FlightTrajectories/: minimization.py  misc_geo.py  optim_analyse_route_iagos_only.py  (+3 more)
(+17 files in other folders)
