[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FlightTrajectories"
version = "1.0.0"
authors = [
    {name ="Olivier Boucher"},
    {name="Ed Gryspeerdt"}
]
description = "Optimize flight trajectories given constraints"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "cartopy",
    "pandas",
    "great_circle_calculator"

]

[project.urls]
"Homepage" = "https://github.com/OB-IPSL/FlightTrajectories"
"Bug Tracker" = "https://github.com/OB-IPSL/FlightTrajectories/issues"

